--- a/css/main.css
+++ b/css/main.css
@@ -286,3 +286,10 @@ html {
     text-shadow: 2px 2px 2px #000;
     opacity: 0.7;
 }
+
+#loader {
+    font-weight: 300;
+    top: 50%;
+    left: 50%;
+    font-size: 2em;
+}
