--- a/css/main.css
+++ b/css/main.css
@@ -274,6 +274,7 @@ html {
     background-image: url(../img/sanganakflatwhitess.png);
     width: 328px;
     opacity: 0.8;
+    transition: opacity 800ms;
 }
 
 #countdown {
@@ -285,13 +286,15 @@ html {
     color: #fff;
     text-shadow: 2px 2px 2px #000;
     opacity: 0.7;
+    transition: opacity 800ms;
 }
 
 #loader {
     width: 40px;
     height: 40px;
-    position: relative;
-    margin: 100px auto;
+    position: fixed;
+    top: 50%;
+    left: 50%;
 }
 
 .double-bounce1,
@@ -299,7 +302,7 @@ html {
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    background-color: #333;
+    background-color: #bababa;
     opacity: 0.6;
     position: absolute;
     top: 0;
